test/modules/cassella/ambigmodmain.unnested2.good
error: Ambiguous module specified as main, there are multiple definitions of 'M'
ambigmodmain.unnested2.chpl:2: note: defined here
ambigmodmain.unnested2.chpl:8: note: defined here
