test/modules/cassella/ambigmodmain.mainModule.compopts
--main-module X.M # ambigmodmain.X.good
